- Fixed picking screen top bar for 10v10 - Fixed GG text not showing properly over hero image

--- a/content/dota_addons/dota_imba/panorama/styles/custom_game/hero_selection.css
+++ b/content/dota_addons/dota_imba/panorama/styles/custom_game/hero_selection.css
@@ -202,13 +202,15 @@ Label {
 
 }
 
+
 .TenVTen .Player {
 	width: 9%;
+	height: 65%;
 }
 
 .TenVTen .Player DOTAHeroImage{
 	width: 100%;
-	height: 60%;
+	height: 58%;
 }
 
 #TeamRadiant .Player {
@@ -263,6 +265,11 @@ Label {
 	text-shadow: 1px 1px 2px 1.0 #000000ee;
 	z-index: 2;
 }
+.TenVTen .PlayerInfo {
+	font-size:  13px;
+	height: 18px;
+	margin-bottom:  39%;
+}
 .PlayerOverlay {
 	background-color:  gradient( linear, 0 100%,0 0, from( #000000dd ), color-stop( 0.4, #0000004a ),  to( #00000000) );
 	width:  100%;
@@ -274,6 +281,12 @@ Label {
 	align: center bottom;
 	margin-bottom:  25%;
 	box-shadow: 0px 0px 6px 2px #000000d5;
+}
+.TenVTen .PlayerOverlay {
+	height: 62%;
+}
+.TenVTen .PlayerColorBar {
+	margin-bottom: 33%;
 }
 .PlayerColorBarOverlay {
 	width:  100%;
